addded xml in POM