@@ -14,6 +14,20 @@
 			    					<target>1.8</target>
 				    </configuration>
 		  </plugin>
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.1.2</version>
+    				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<suiteXmlFiles>
+						<suiteXmlFile>./Para.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+</plugin>
+
 		  
 	  </plugins>
   </build>
